# open-ucloud

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  flutter_rust_bridge.yaml
.github/: dependabot.yml
.github/workflows/: build-artifacts.yml  ci.yml  release.yml
apps/client/: .metadata  README.md  pubspec.yaml
apps/client/android/: key.properties.example  settings.gradle.kts
apps/client/android/app/: build.gradle.kts
apps/client/android/app/src/main/: AndroidManifest.xml
apps/client/android/app/src/main/kotlin/io/github/nizne9/open_ucloud/: MainActivity.kt
apps/client/lib/: main.dart
apps/client/lib/src/: app.dart  assignment_content_view.dart  client_controller.dart  client_state.dart  home_screen.dart  home_screen_assignments.dart  home_screen_attendance.dart  home_screen_dashboard.dart  home_screen_downloads.dart  home_screen_resources.dart  home_screen_widgets.dart  open_cloud_gateway.dart  session_storage.dart  theme_mode_controller.dart
apps/client/linux/: CMakeLists.txt
apps/client/linux/runner/: my_application.cc
apps/client/macos/Runner/: DebugProfile.entitlements  Release.entitlements
apps/client/macos/Runner.xcodeproj/: project.pbxproj
apps/client/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/client/macos/Runner/Configs/: AppInfo.xcconfig
apps/client/macos/Runner/Scripts/: bundle_open_cloud_ffi.sh
apps/client/test/: assignment_content_view_test.dart  client_controller_test.dart  open_cloud_gateway_test.dart  theme_mode_controller_test.dart  theme_mode_test.dart  widget_test.dart
apps/client/test/support/: fakes.dart
apps/client/windows/: CMakeLists.txt
apps/client/windows/runner/: Runner.rc  main.cpp
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/tests/: dto_contract.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/tests/: cli_contract.rs
crates/core/: Cargo.toml
crates/core/src/: assignments.rs  attendance.rs  auth.rs  client.rs  courses.rs  error.rs  extensions.rs  lib.rs  protocol.rs  resources.rs  session.rs  transport.rs
crates/core/tests/: assignments_resources.rs  auth_flow.rs
crates/ffi/: Cargo.toml
crates/ffi/dart/: pubspec.yaml
crates/ffi/dart/lib/: open_cloud_ffi.dart
crates/ffi/dart/lib/src/: open_cloud_repository.dart
crates/ffi/dart/lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
crates/ffi/src/: api.rs  frb_generated.rs  lib.rs  session.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/store/tests/: memory_session_store.rs  secure_session_store.rs
docs/: architecture.md  cli-contract.md  quality.md  task-guidelines.md
docs/superpowers/plans/: 2026-05-06-attendance-sign-and-qr.md
docs/superpowers/specs/: 2026-05-06-attendance-sign-and-qr-design.md
