[workspace]
members = [
  "crates/api",
  "crates/core",
  "crates/store",
  "crates/cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/open-ucloud/open-cloud"
rust-version = "1.78"

[workspace.dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
keyring = { version = "3", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "rustls-tls"] }
rpassword = "7.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
