[workspace]
members = [
  "crates/api",
  "crates/core",
  "crates/store",
  "crates/cli",
  "crates/ffi",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/nizne9/open-ucloud"
rust-version = "1.88"

[workspace.dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "=4.6.1", features = ["derive"] }
cookie = "0.18"
flutter_rust_bridge = "=2.12.0"
keyring = { version = "3", default-features = false }
reqwest = { version = "=0.12.28", default-features = false, features = ["cookies", "json", "multipart", "rustls-tls", "stream"] }
futures-util = "0.3"
rpassword = "=7.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "=0.27.0"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
url = "=2.5.8"
uuid = { version = "=1.23.1", features = ["v4"] }
