[package]
name = "open-cloud-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
cookie.workspace = true
futures-util.workspace = true
open-cloud-api = { path = "../api" }
open-cloud-store = { path = "../store", default-features = false }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
scraper.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
