[package]
name = "open-cloud-ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "open_cloud_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge.workspace = true
open-cloud-api = { path = "../api" }
open-cloud-core = { path = "../core" }
open-cloud-store = { path = "../store", default-features = false }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
async-trait.workspace = true
base64.workspace = true
