[package]
name = "open-cloud-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["desktop-keyring"]
desktop-keyring = ["keyring/apple-native", "keyring/linux-native", "keyring/windows-native"]
linux-secret-service = ["keyring/sync-secret-service", "keyring/crypto-rust"]
linux-secret-service-vendored = ["linux-secret-service", "keyring/vendored"]

[dependencies]
async-trait.workspace = true
keyring.workspace = true
open-cloud-api = { path = "../api" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
